Fixing bg imgs for pimg1-3 on mobile

--- a/scss/6-changingState/_mobile.scss
+++ b/scss/6-changingState/_mobile.scss
@@ -88,8 +88,7 @@
     .pimg1,
     .pimg2,
     .pimg3 {
-        background-size: auto;
-        background-attachment: fixed;
+        background-attachment: initial;
     }
     .menu-btn {
         position: fixed;
